style.css
/* ===================================
   EVERYTHING
   =================================== */

* {
    font-family: var(--default-font);
    box-sizing: border-box;
    margin: 0;
    padding: 0;
   }

body {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   -webkit-user-select: none; /* no highlighting - Safari */
   user-select: none; /* no highlighting */
}

body.dark-mode {
   --body-color: ;
   --grid-color: ;
}

:root {
   --link-color: ;
   --h1-font-size: 2em;
   --h2-font-size: 1.45em;
   --h3-font-size: 1.15em;
   --h4-font-size: 0.8em;
   --button-radius: 8px;
   --box-shadow: 0px 4px 6px rbga(0,0,0,0.1);
   --body-color: #ffffff;
   --grid-color:#000000;
   --handwritten-font: 'Finger Paint', 'JetBrains Mono', monospace;
   --default-font:'JetBrains Mono', 'Finger Paint', monospace;
}

button,
a,
img.light-dark-mode {
    cursor: pointer;
}

a {
    color: var(--link-color);
    text-decoration: none;
}

a:visited {
    color: var(--link-color);
}

a:hover {
    text-decoration: overline;
}

/* ===================================
   HEADER
   =================================== */
.header {
   display: flex;
   padding: 15px 0px;
   justify-content: center;
   position: relative;
}

.title {
   font-size: var(--h1-font-size);
   justify-self: center;
}

.header img {
   height: var(--h1-font-size);
   margin: 0 0 0 35px;
   color: var(--link-color);
   position: absolute;
}

/* ===================================
   MAIN BODY
   =================================== */
.container {
   display: flex;
   flex-direction: column;
   /* flex-grow: 1; */
   /* justify-content: space-evenly; */
   align-items: center;
}

.win-message,
.tie-message {
   font-family: var(--default-font);
}

.grid-container {
   justify-self: center;
   display: grid;
   width: fit-content;
   gap: 5px;
   grid-template-rows: repeat(3, 100px);
   grid-template-columns: repeat(3, 100px);
   background-color: var(--grid-color);
}

.grid-space {
   font-family: var(--handwritten-font);
   background-color: var(--body-color);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 55px;
}

/* ===================================
   FOOTER
   =================================== */
.footer {
   text-align: center;
}

